--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <html>
   <head>
     <title>SaCode</title>
+
+    <style>
+      .bg-yellow{
+        background-color: yellow;
+      }
+      .text-yellow {
+        color: yellow;
+      }
+      .text-black {
+        color: black;
+      }
+    </style>
   </head>
-    <body>
-        <h1> Hello SaCode!</h1>
+    <body style="background-color: black; color: white;">
+        <h1 class="text-yellow"> Hello SaCode!</h1>
         <p>Selamat datang di SaCode!</p>
+
+        <div class="bg-yellow">
+            <p class="text-black">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum nihil sapiente ea perferendis eum voluptas officia optio, enim eaque nesciunt excepturi. Inventore quidem ab porro quasi maxime ducimus ex incidunt laudantium, repellendus vero reprehenderit magni, minus quo praesentium rerum in.</p>
+        </div>
+        <p>Copyright &copy; 2023</p>
     </body>
 </html>
