hasil belajar day02

--- a/index.font-awersome.html
+++ b/index.font-awersome.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <!-- FontAwersome CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/fontawesome.min.css" integrity="sha512-siarrzI1u3pCqFG2LEzi87McrBmq6Tp7juVsdmGY1Dr8Saw+ZBAzDzrGwX3vgxX1NkioYNCFOVC0GpDPss10zQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 <body>
@@ -21,10 +21,10 @@
             <div class="col-12">
                 <nav>
                     <a href="index.html" class="btn btn-danger text-light">
-                        <i class="fa-solid fa-home"></i> Back to Home
+                        <i class="fa-solid fa-house"></i> Back to Home
                     </a>
                     <a href="index.html" class="btn btn-primary text-light">
-                        <i class="fa-solid fa-home"></i> Back to Home
+                        <i class="fa-solid fa-house"></i> Back to Home
                     </a>
                 </nav>
             </div>
